# GroupKeyforInMemoryDatabase

./: CMakeLists.txt  README.md
src/: AbstractDictionary.h  AbstractIndex.h  BaseAttributeVector.h  BaseDictionary.h  BaseSliceSet.h  BitCompressedVector.h  ColumnMetaData.h  ColumnSliceSet.h  ColumnTable.cpp  ColumnTable.h  DGroupKey.h  DRowTable.cpp  DRowTable.h  GroupKeyForGroupProxy.cpp  GroupKeyForGroupProxy.h  OrderedDictionary.h  Singleton.h  StorageTypes.h  TableManager.cpp  TableManager.h  TableMetaData.h  ToolSet.cpp  ToolSet.h
test/: BitCompressedVectorTest.cpp  CMakeLists.txt  ColumnTableTest.cpp  DGroupKeyTest.cpp  DRowTableTest.cpp  OrderedDictionaryTest.cpp  TableManagerTest.cpp  ToolSetTest.cpp  main.cpp
